src/index.css
@import "tailwindcss";

* {
  cursor: none !important;
}

.oswald-2 {
    font-family: "Oswald", sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
}

@keyframes floatLiquid {
  0% {
    border-radius: 40% 60% 70% 30% / 40% 40% 60% 50%;
    transform: rotate(0deg) scale(1);
  }
  50% {
    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
    transform: rotate(180deg) scale(1.1);
  }
  100% {
    border-radius: 40% 60% 70% 30% / 40% 40% 60% 50%;
    transform: rotate(360deg) scale(1);
  }
}

.liquid-bubble {
  animation: floatLiquid 8s cubic-bezier(0.4, 0, 0.2, 1) infinite;
  background: radial-gradient(130% 130% at 20% 20%, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0) 100%);
  backdrop-filter: blur(4px);
  -webkit-backdrop-filter: blur(4px);
  border: 1px solid rgba(255, 255, 255, 0.2);
  box-shadow: inset 3px 3px 6px rgba(255, 255, 255, 0.4), inset -4px -4px 10px rgba(0, 0, 0, 0.8);
}

